--- a/WebApplication1/Views/facilidades/reservar.cshtml
+++ b/WebApplication1/Views/facilidades/reservar.cshtml
@@ -262,7 +262,7 @@
                         <div class="form-group row">
                             <label for="example-date-input" class="col-sm-3 col-form-label">Fecha para reservar</label>
                             <div class="col-sm-4">
-                                <input class="form-control" type="date" autocomplete="off"
+                                <input min="" class="form-control" type="date" autocomplete="off"
                                        data-toggle="tooltip" title="Elije la fecha para reservar"
                                        name="dateFaci" required
                                        value="" id="example-date-input">
