--- a/WebApplication1/Areas/coadmin/Views/facilidades/agregar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/facilidades/agregar.cshtml
@@ -87,7 +87,7 @@
                             <div class="form-group row">
                                 <label for="example-time-input" class="col-sm-3 col-form-label">Hora de inicio</label>
                                 <div class="col-sm-9">
-                                    <input autocomplete="off" class="form-control" max="19:00:00" min="8:00:00" type="time" name="start_time" required
+                                    <input step="1" class="form-control" max="21:00" min="08:00" type="time" name="start_time" required
                                            data-toggle="tooltip" title="Hora de inicio de disponibilidad"
                                            value="" id="example-time-input">
                                     <small class="form-text text-muted">Hora de inicio de disponibilidad</small>
@@ -97,7 +97,7 @@
                             <div class="form-group row">
                                 <label for="example-time-input" class="col-sm-3 col-form-label">Hora de fin</label>
                                 <div class="col-sm-9">
-                                    <input autocomplete="off" class="form-control" min="9:00:00" max="20:00:00" type="time" name="end_time" required
+                                    <input step="1" class="form-control" min="09:00" max="22:00" type="time" name="end_time" required
                                            data-toggle="tooltip" title="Hora de fin de disponibilidad"
                                            value="" id="example-time-input">
                                     <small class="form-text text-muted">Hora de fin de disponibilidad</small>
@@ -139,7 +139,7 @@
                                     <div class="input-group mt-2">
                                         <div class="custom-file">
                                             <input type="file" class="custom-file-input" id="inputGroupFile04"
-                                                   name="upload_regulation" accept=".pdf" />
+                                                   name="upload_regulation" />
                                             <label id="input-arch" class="custom-file-label" for="inputGroupFile04">Seleccionar archivo</label>
                                         </div>
                                     </div>
